# SerenCorpusCallosum

./: .gitignore  Makefile  README.md  SerenCorpusCallosum.slnx
.github/: dependabot.yml
.github/workflows/: release.yml
SerenCopusCallosumVSCode/: .vscodeignore  README.md  package.json  publish.ps1  tsconfig.json
SerenCopusCallosumVSCode/seren_corpuscallosum-vscode/src/: client.ts  config.ts  extension.ts  tools.ts
SerenCopusCallosumVSCode/test/: client.test.ts
SerenCorpusCallosum/: README.md  SerenCorpusCallosum.pyproj  pyproject.toml  runtime-stores.json  seren-corpus-callosum.service.sample  seren-corpus-callosum.yaml.sample
SerenCorpusCallosum/seren_corpus_callosum/: __init__.py  __main__.py  adapters.py  app.py  config.py  federation.py  fusion.py  overlay.py  transport.py
SerenCorpusCallosum/seren_corpus_callosum/mcp/: __init__.py  server.py  tools.py
SerenCorpusCallosum/seren_corpus_callosum/models/: __init__.py  schemas.py
SerenCorpusCallosum/seren_corpus_callosum/routes/: __init__.py  configure.py  search.py  stores.py
SerenCorpusCallosum/seren_corpus_callosum/viewer/: callosum.html
SerenCorpusCallosum/seren_corpus_callosum/viewer/ui/: body.html  header_aside.html  scripts.js  styles.css  tabs.html
SerenCorpusCallosum/tests/: test_adapters.py  test_app.py  test_configure.py  test_edges.py  test_federation.py  test_fusion.py  test_mcp_mount.py  test_mcp_tools.py  test_overlay.py  test_stores.py
SerenCorpusCallosumVSCode/: README.md  package-lock.json  package.json
SerenCorpusCallosumVSCode/seren_corpuscallosum-vscode/: esbuild.js
SerenCorpusCallosumVSCode/seren_corpuscallosum-vscode/src/: client.ts  config.ts  extension.ts  tools.ts
